manifests/apps/ome/cmd-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ome-cmd-a
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cmd-a
  namespace: ome-cmd-a
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ome.acebutt.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
          - name: Model
            value: cmd-a-srt
      backendRefs:
        - name: cmd-a-srt-engine
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
          - name: Model
            value: cmd-a-vllm
      backendRefs:
        - name: cmd-a-vllm-engine
          port: 8080
          weight: 1
