manifests/apps/ome/llama-70b.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llama-70b-demo
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llama-3-1-70b-instruct
  namespace: llama-70b-demo
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - ome.acebutt.xyz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
          - name: Model
            value: llama-3-1-70b-instruct-srt
      backendRefs:
        - name: llama-3-1-70b-instruct-srt-engine
          port: 8080
          weight: 1
    - matches:
        - path:
            type: PathPrefix
            value: /
          headers:
          - name: Model
            value: llama-3-1-70b-instruct-vllm
      backendRefs:
        - name: llama-3-1-70b-instruct-vllm-engine
          port: 8080
          weight: 1
